--- a/formular/templates/formular/home.html
+++ b/formular/templates/formular/home.html
@@ -1,45 +1,71 @@
-   {%load static%}
-    <!DOCTYPE html>
-    <html>
-    <head>
-	    <meta charset="utf-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'formular/custom.css' %}"  >
-        
-        <title>{%block title%} Formular {%endblock%}</title>
-    </head>
-    <body>
-	
-        <div class="container h-820 w-1440">
-            <div id="show_Table"class="mx-auto h-300 w-450">
+    {% extends 'formular/base.html' %}
+    {% block content%}
+    {% load static %}   
 
-                <table class="table table-dark table-striped">
-                    <thead class="table-light">
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Title</th>
-                            <th scope="col">Description</th>
-                            <th scope="col">Url</th>
-                        </tr>
-                    </thead>
-                    <tbody>
+    
+    <div class="form_parent">
 
-                        {%for number,project in projects%}
-                        <tr>
-                            <td scope="row">{{number}}</td>
-                            <td>{{project.title}}</td>
-                            <td>{{project.description}}</td>
-                            <td><a href="{{project.url}}">Click here please</a></td>
-                        </tr>
-                        {%endfor%}
-                    </tbody>
-                </table>
+        <form class="row g-1 needs-validation {% if form.errors %}was-validated{% endif %}" name="employee_form" method="POST" novalidate>
+            
+            <!-- This block validates the security -->
+            {% csrf_token %}
 
+             <div class="col-md-6 ">
+                
+                {{form.firstname}}
+                
+                <div class="valid-feedback">
+                    Nice name ;)
+                </div>
+                <div class="invalid-feedback">
+                    Please insert ur name
+                </div>
             </div>
-        </div>
+            <div class="col-md-6 ">
+                
+                {{form.lastname}}
 
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    </body>
-    </html>
+            
+                <div class="valid-feedback">
+                    Lastname is a must have!
+                </div>
+                <div class="invalid-feedback">
+                    Please insert ur lastname   
+                </div>
+            </div>    
+
+            <div class="col-md-12">
+                <label class="form-label" for="form.jobCategories.id_for_label">Job Title:</label>
+                <br>                
+                {{form.jobCategories}}
+                <div class="valid-feedback">
+                    Job title selected.
+                </div>
+                <div class="invalid-feedback">
+                    Please select a job title.
+                </div>
+                
+            </div> 
+
+            <div class="col-md-12 ">
+                <label class="form-label" for="{{form.gender.id_for_label}}">Sex:</label>
+                <br>
+                {{form.gender}}
+                <div class="valid-feedback">
+                    Gender selected.
+                </div>
+                <div class="invalid-feedback">
+                    Please select a gender.
+                </div>
+            </div>  
+
+            <!-- {{form}} -->
+            <div class="col-md-12">
+                <button type="submit" class="btn btn-primary" >Sign in</button>
+            </div>
+        </form>
+
+    </div>
+
+    {%endblock content%}
 
