--- a/formular/templates/formular/base.html
+++ b/formular/templates/formular/base.html
@@ -21,9 +21,9 @@
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light mx-3">
                 <!--
-            In url function we provide url name for from
-            the file with url's path we need. [.\employeeForm_Graphic\urls.py]
-        -->
+                    In url function we provide url name for from
+                    the file with url's path we need. [.\employeeForm_Graphic\urls.py]
+                -->
                 <a class="navbar-brand" href="{% url 'home' %}">Employee Form</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -31,8 +31,10 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="{% url 'home' %}">Home </a>
-                        <a class="nav-item nav-link" href="{%url 'showTableDB'%}">See Employee</a>
+                        <a class="nav-item nav-link" href="{% url 'home' %}" >Home </a>
+                        <a class="nav-item nav-link" href="{% url 'showTableDB' %}">See Employee</a>
+                        <a class="nav-item nav-link" href="{% url 'graphs' %}">Graphs</a>
+
 
                     </div>
                 </div>
@@ -41,14 +43,14 @@
             <div class="container">
                 <!-- This for will loop through entire message hash and will display them  -->
                 {% if messages %}
-                {% for message in messages %}
+                    {% for message in messages %}
 
-                <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
 
-                {% endfor %}
+                    {% endfor %}
                 {% endif %}
 
 
@@ -70,6 +72,8 @@
                     var emojiMap = {
                         '{% url 'home' %}': '🏠',  // Home emoji
                         '{% url 'showTableDB' %}': '👀',  // See Employee emoji
+                        '{% url 'graphs' %}': '📊',  // See Graphics emoji
+                        
                         // Add more URLs and corresponding emoji representations here
                     };
 
