--- a/formular/templates/formular/home.html
+++ b/formular/templates/formular/home.html
@@ -61,7 +61,7 @@
 
             <!-- {{form}} -->
             <div class="col-md-12">
-                <button type="submit" class="btn btn-primary" >Sign in</button>
+                <button type="submit" class="btn btn-primary" > Inscrie angajat </button>
             </div>
         </form>
 
